YelpCamp/v4/readme.md
#Style the campgrounds page  
* Add a better header/title  
* Make campgrounds display in a grid  

#Style the Navbar and Form  
* Add a navbar to all templates  
* Style the new campground form  

#Add Mongoose  
* Install and configure mongoose  
* Setup campground model  
* Use campground model inside of our routes

#Show Page  
* Review the RESTful routes we've seen so far  
* Add description to our campground model  
* Show db.collection.drop()  
* Add a show route/template  

RESTFUL ROUTES  
name        url         verb            description  
=======================================================================  
INDEX       /dogs       GET             Display a list of all dogs  
NEW         /dogs/new   GET             Displays form to make a new dogs  
CREATE      /dogs       POST            Add new dog to DB  
SHOW        /dogs/:id   GET             Shows info about one dog

#Refactor Mongoose Code  
* Create a models directory  
* Use module.exports  
* Require everything correctly!  

#Add Seeds File  
* Add a seeds.js file  
* Run the seeds file every time the server starts  

#Add the Comment model!  
* Make our errors go away!  
* Display comments on campground show page  

#Comment New/Create  
* Discuss nested routes  
* Add the comment new and create routes  
* Add the new comment form  

RESTFUL ROUTES  

name        url                 verb        desc.
================================================================================  
INDEX       /dogs               GET         Display a list of all dogs  
NEW         /dogs/new           GET         Displays form to make a new dog  
CREATE      /dogs/:id           POST        Add new dog to DB  
SHOW        /dogs/:id           GET         Shows info about one dog  

NEW         /campgrounds/:id/comments/new       GET 
CREATE      /campgrounds/:id/comments           POST




